[tool.poetry]
name = "need-to-change-this-name"
version = "0.0.1"
description = "The author's repository."
authors = ["R543hfer099JJfd <90861560+R543hfer099JJfd@users.noreply.github.com>"]
license = "Apache-2.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
